--- a/Front-end/Dockerfile
+++ b/Front-end/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18
 
 WORKDIR /eletypes_react
 
-ADD package.json package-lock.json /eletypes_react
+ADD package.json package-lock.json 
 
 RUN npm install
 
